20121226 doc/libspectrum.txt: tweak PZX text (Fred).
20121226 ChangeLog,README: first updates for a "1.1.0" release (Fred).
20121227 libspectrum.c: set name for Spectrum 128Ke machine type (Sergio).
20121229 doc/libspectrum.1: use an em dash (Stuart).
20121230 timings.c: add timings for 128Ke, copied from those for 128K (Stuart).
20121231 timings.c: 128Ke timings are intended to be based on +2A (Fred).
20121231 libspectrum.c: add 128Ke capabilities as long as it is in the library
         (Fred).
20121231 accessor.pl,doc/libspectrum.txt,libspectrum.h.in,sna.c,z80.c: rename
         'Interface II' to 'Interface 2' in comments and documentation (Stuart).
20130103 configure.ac: make some URLs point to the new sourceforge forge and
         update copyright date to 2013 (Sergio).
20130103 configure.ac: add trailing slash to URL of bug tracker (Stuart).
20130126 accessor.pl,doc/libspectrum.txt,snap_accessors.txt,snapshot.c,szx.c:
         add support for storing ZX Printer state (bug #274) (Fred).
20130130 timings.c: correct video timing for +2A/+3 etc machines (part of
         patch #305).
20130307 accessor.pl,snap_accessors.txt,szx.c: implement Spectranet's "suppress
         NMI" flipflop (bug #259).
20130516 Makefile.am: update library version number for 1.1 release.
20130516 doc/libspectrum.3: update version number and date for 1.1 release.
20130516 ChangeLog: update date in main changelog.
20130517 README: update one more date for the 1.1 release.
20130518 doc/libspectrum.txt: update version number for 1.1 release (Sergio).
20130524 Makefile.am: update libtool age to support binaries built against
         libspectrum 1.0.0 (Stuart).
20130526 Makefile.am: add dll.c into the dist tarball (Sergio).
20130928 configure.ac: use 'subdir-objects' option as advised by automake 1.14
         to place object files in subdirectories (Sergio).
20131013 configure.ac: replace obsolete ac_cv_prog_gcc with ac_cv_c_compiler_gnu
         (Sergio).